Changes since 1.0.0

- Added a proper Makefile.PL to SCST::SCST so now we have a also a
  proper man page.
- Renamed Changes to ChangeLog
- Updated README to include instructions for installing the perl module.
- Renamed SCST perl module directory tp scst-0.7.4

Changes since 1.0.0 RC1

- Updated SCST/SCST.pm to add one more option mapping NV -> NV_CACHE.
- Install/uninstall added.

Changes since 0.9.6-pre2:

- Updated SCST/SCST.pm for vdisk/vcdrom from cdrom_fileio/disk_fileio
- Updated scstadmin for vdisk/vcdrom...
- Minor updates to scst_db for vdisk/vcdrom - UNTESTED
- Enhanced error messages in SCST/SCST.pm. Now has new method errorString()
- Added additional error messaging to scstadmin
- Changed SCST/SCST.pm to look for vdisk/vdisk instead of vdisk/type for
  valid device handler types.
- Fixed applyConfiguration() to remove entries before adding new ones.
- Fixed changes and differences counts
- Added intelligence around virtual/physical/performance type devices
- Fixed applyConfiguration() to apply a full config even in -ForceConfig mode
- Fixed device handler switches
- Fixed device assignment LUN changes
- Fixed handling of disabled handlers (like dev_disk, dev_cdrom, etc from compile time)
- Minor bug fixes

Changes since 0.9.5-pre0:

- Renamed scst to scstadmin
- Fixed writeConfiguration() to properly write DEVICE lines with no options
- Removed the comment which prevented a target from being enabled in enableTarget()
- Updated init.d/scst to use scstadmin instead of scst_db
- Fixup of README file

Changes since 0.9.2-pre2:

- List SCST sessions
- Verify specified config file against live configuration and show differences
- Write config file based on live configuration
- Force-apply configuration, even config deletions with a force flag.
- Added new option types
- Added support for specifying a blocksize
- Added "-reload-config" to init script